# olymps

./: template.cpp
DP tricks/: CMakeLists.txt  [IOI] Guardians of the Lunatics.cpp  acm.zju.edu.cn_problemId1860.cpp  cats.cpp  cf190_taskE.cpp  cf79E.cpp  main.cpp  nkleaves.cpp  temp
crypto_grodno/: CMakeLists.txt  input.txt  task10.cpp  task3.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp  test.cpp  tests
grodno crypto/: CMakeLists.txt  input.txt  key  main.cpp  main_1.cpp  task10.cpp  task11.cpp  taskA.cpp  taskB.cpp  taskC.cpp  taskD.cpp  taskE.cpp  taskF.cpp  taskF_1.cpp  taskG.cpp  task_1.cpp
nimGame/: 1465. Pawn Game.cpp  CMakeLists.txt  SnarkHunt.cpp  acm.sgu.ru.problem328.cpp  cf.gym.100136.I.cpp  informatics.1014.cpp  informatics.112708.cpp  informatics.2976.cpp  informatics.368.cpp  informatics.369.cpp  informatics.370.cpp  informatics.371.cpp  informatics.373.cpp  informatics.565.cpp  informatics.649.cpp  test
other tasks/bsuir_open_quatrofinal/: CMakeLists.txt  taskA.cpp  taskB.cpp  taskC.cpp  taskD.cpp  taskE.cpp  taskF.cpp  taskG.cpp  taskH.cpp  taskI.cpp  taskJ.cpp  taskK.cpp  tests
other tasks/codeforces education 7/: CMakeLists.txt  main.cpp  taskA.cpp  taskB.cpp  taskC.cpp  taskD.cpp
other tasks/contest.2016/: CMakeLists.txt  task159.cpp  task512.cpp  taskA.cpp  taskB.cpp  taskC.cpp  taskD.cpp  taskE.cpp  test
other tasks/opencup upsolving/: CMakeLists.txt  main.cpp  school_olypm_day_1_task_D.cpp  taskA.cpp  taskI.cpp
other tasks/opencup_Bashkortostan_upsolving/: CMakeLists.txt  cf325div2E.cpp  main.cpp  taskA.cpp  taskF.cpp  taskJ.cpp  (+1 more)
(+12 files in other folders)
